Dark mode style fixes

--- a/src/Papyros.css
+++ b/src/Papyros.css
@@ -7,7 +7,7 @@
 .cm-scroller, .cm-gutters { /* Min height of the editor via both gutter and scroller */
   min-height: 20vh !important;
 }
-.cm-content, #__papyros-code-output-area {
+.cm-content, .papyros-font-family {
   font-family: Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
 }
 /* Change styling of tooltips generated by CodeMirror */
